# content-hub-showcase

./: .bilingual-allowlist  .gitignore  .markdownlint-cli2.jsonc  .private-guard  CHANGELOG.md  DECISIONS.md  EXAMPLES.md  README.en.md  README.md  docker-compose.dev.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schema.py  0002_demo_ingested.py
backend/scripts/: build_demo_db.py
backend/src/content_hub_showcase/: main.py
backend/src/content_hub_showcase/agents/: checkpointer.py  prompts.py  shared_types.py
backend/src/content_hub_showcase/agents/graphs/: analyzer_graph.py  identity_manager_graph.py  planner_graph.py  post_generator_graph.py
backend/src/content_hub_showcase/agents/nodes/analyzer/: nodes.py
backend/src/content_hub_showcase/agents/nodes/identity_manager/: loader.py
backend/src/content_hub_showcase/agents/nodes/planner/: nodes.py
backend/src/content_hub_showcase/agents/nodes/post_generator/: briefer.py  finalizer.py  researcher.py  social_writer.py  writer.py
backend/src/content_hub_showcase/agents/states/: analyzer.py  identity_manager.py  planner.py  post_generator.py
backend/src/content_hub_showcase/api/: deps.py  errors.py  schemas.py  sse.py
backend/src/content_hub_showcase/api/middleware/: anti_abuse.py  cors.py  rate_limit.py  session.py
backend/src/content_hub_showcase/api/routes/: archetypes.py  generations.py  health.py  ingest.py  learning.py  plans.py
backend/src/content_hub_showcase/content/: models.py  service.py
backend/src/content_hub_showcase/content/repositories/: generated_posts.py  ingested.py
backend/src/content_hub_showcase/learning/: service.py
backend/src/content_hub_showcase/personality/: models.py  repository.py  service.py
backend/src/content_hub_showcase/shared/: config.py  db.py  embeddings.py  llm_client.py  logger.py  vector_db.py
backend/tests/: conftest.py  test_config.py
backend/tests/agents/: test_identity_manager.py  test_planner_analyzer.py  test_post_generator_graph.py
backend/tests/api/: test_archetypes.py  test_generations.py  test_health.py  test_ingest_learning.py  test_middleware.py  test_sse.py
backend/tests/content/: test_generated_posts.py
backend/tests/shared/: test_embeddings.py  test_llm_client.py
docs/: BUILD_REPORT.md  HOW_TO_DEPLOY.md  SPEC.md
frontend/: .env.example  (+7 more)
(+36 files in other folders)
