[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-hub-showcase"
version = "0.1.0"
description = "Content-hub Showcase — public multi-agent AI content demo (FastAPI + LangGraph)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Spec asks pydantic 2.10.x; upper-open within v2 so pinned chromadb/langgraph resolve.
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7",
    # ADR-009: LangGraph 1.1.6 exact pin. prebuilt/checkpoint resolved transitively —
    # the spec's explicit pins (prebuilt==1.1.6, checkpoint==3.1.0) do not exist on PyPI.
    "langgraph==1.1.6",
    "langchain-core>=0.3,<2.0",
    # Spec pin 0.1.0 predates langgraph-checkpoint 3.x — using the compatible line.
    "langgraph-checkpoint-redis>=0.5,<0.6",
    "redis>=5.0",
    # ADR-002/B.5.4: exact pin — Chroma migrations between minors are irreversible.
    "chromadb==1.5.9",
    "groq>=0.5",
    "openai>=1.12",
    # ADR-017: local Qwen3-Embedding-0.6B via sentence-transformers (1024 dim, offline).
    "sentence-transformers>=3.0",
    "tenacity>=8.2",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/content_hub_showcase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]

[tool.mypy]
strict = true
# Runtime targets 3.11 (Docker); 3.12 here only because numpy's stubs use the
# 3.12 `type` statement and mypy refuses to parse them at the 3.11 level.
python_version = "3.12"
mypy_path = "src"
packages = ["content_hub_showcase"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "langgraph.checkpoint.redis.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numpy ships 3.12-only `type` statements in its stubs; we target 3.11 (spec).
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true
